<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0"
    tools:context=".MainActivity" >
    
       <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:padding="10dp"
            android:background="@color/blanc"
             >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical" >
               
           <TextView
               android:id="@+id/textView2"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:textSize="20sp"
               android:text="@string/name_server"
               />

           <EditText
               android:id="@+id/editText1"
               android:layout_width="fill_parent"
               android:layout_height="40dp"
          android:inputType="text"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
               >

               <requestFocus />
           </EditText>

           <TextView
               android:id="@+id/textView3"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:textSize="20sp"
               android:layout_marginTop="20dp"
               android:text="@string/host_name"
                />

           <EditText
               android:id="@+id/editText2"
               android:layout_width="match_parent"
          android:layout_height="40dp"
          android:inputType="text"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp" />

           <TextView
               android:id="@+id/textView4"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:textSize="20sp"
               android:layout_marginTop="20dp"
               android:text="@string/user_name"
                />

           <EditText
               android:id="@+id/editText3"
               android:layout_width="match_parent"
          android:layout_height="40dp"
          android:inputType="text"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp" />

           <TextView
               android:id="@+id/textView5"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:textSize="20sp"
               android:layout_marginTop="20dp"
               android:text="@string/pass_name"
               />

           <EditText
               android:id="@+id/editText4"
               android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp"
               android:inputType="textPassword" />

           <TextView
               android:id="@+id/textView6"
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:textSize="20sp"
               android:layout_marginTop="20dp"
               android:text="@string/port_connect"
                />

           <EditText
               android:id="@+id/editText5"
               android:layout_width="match_parent"
          android:layout_height="40dp"
          android:inputType="text"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="10dp" />
               
           </LinearLayout>

          
        </ScrollView>
                
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/bt_server"
        android:textColor="@color/blanc"
        android:background="@color/bleu"
         />

</LinearLayout>
